--- a/Locadora/src/main/resources/application.properties
+++ b/Locadora/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql = true
