--- a/Locadora/bin/src/main/resources/application.properties
+++ b/Locadora/bin/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.password = f12.tecnologia
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name = org.postgresql.Driver
-spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql = true
