Alterando para Banco de Dados MySql

--- a/Locadora/src/main/resources/application.properties
+++ b/Locadora/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 server.port=8084
 
 #Conexao com Banco de Dados
-spring.datasource.url = jdbc:postgresql://pgsql.f12tecnologia.com.br:5432/f12tecnologia?currentSchema=schema_locadora
-spring.datasource.username = f12tecnologia
-spring.datasource.password = f12.tecnologia
+spring.datasource.url = jdbc:mysql://localhost:3306/locadora?currentSchema=schema_locadora
+spring.datasource.username = root
+spring.datasource.password = root
 
 #Hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.jpa.show-sql = false
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.format_sql = true
